# Hearthstone-Battleground-Clone

./: .gitignore  Board.cpp  Board.h  BoardGraphic.cpp  BoardGraphic.h  Bot.cpp  Bot.h  CLI.cpp  CLI.h  CMakeLists.txt  CardGraphic.cpp  CardGraphic.h  Cards.cpp  Cards.h  DumbPointerTesting.cpp  Effects.h  GameLogicManager.cpp  GameLogicManager.h  Graphic.cpp  Graphic.h  Heroes.h  LICENSE  Minions.cpp  Minions.h  MinionsCards.cpp  MinionsCards.h  MinionsTribes.h  Player.cpp  Player.h  README.md  Shop.cpp  Shop.h  game.cpp  game.h  main.cpp  shop.cpp  shop.h
.cache/clangd/index/: Board.cpp.DDD5343B7435B22F.idx  Board.h.9FE884EF9872B5E2.idx  CLI.cpp.C88114E0401EE49E.idx  CLI.h.DC05B235168E4F7A.idx  CLI_test.cpp.A600E61AAE38EC19.idx  Cards.cpp.CDACFB1A186CFB84.idx  Cards.h.657A6C08A5860DE8.idx  Effects.h.2E0530AC5F36D1A3.idx  GameLogicManager.cpp.0C6A69CA0D1C3536.idx  GameLogicManager.h.D0A0D2BC9CFE1618.idx  Heroes.h.E2B4ADACB0FBEEFA.idx  Minions.cpp.9CD9A2E101727785.idx  Minions.h.962FB35EFDC0C06F.idx  MinionsCards.cpp.4538ABDAAA8D103D.idx  MinionsCards.h.314E1AC4CAD5833A.idx  MinionsTribes.h.5C3922C7B85E0C8E.idx  Player.cpp.B49885E8F1D518E3.idx  Player.h.73F8FF09356EBFE7.idx  Shop.cpp.15C2A814EE644C7B.idx  Shop.h.64D5354D86190FD9.idx  board_test.cpp.8516269D9F2C6C2A.idx  game.cpp.F15C10307BEF4F6E.idx  game.h.7A2C72AE948BB63F.idx  game_logic_manager_test.cpp.1A3C3D9967D5879F.idx  main.cpp.D5CC4581B39B43E9.idx  shop_buy_test.cpp.8F4EAE31AC440DD0.idx  shop_test.cpp.120054D1363DC1D2.idx
.github/workflows/: cmake.yml
Debug/: CMakeCache.txt  HearthStoneClone  Makefile  board_test  cli  game_logic_manager  shop  shop_buy_test  shop_test
UnitTest/: CLI_test.cpp  board_graphic_test.cpp  board_test.cpp  game_logic_manager_test.cpp  shop_buy_test.cpp  shop_test.cpp
